# ox_ctfd_task

./: .gitignore  README.md  pyproject.toml
ox_ctfd_task/: cli.py  commit_graph.py  data_processing.py  github_api.py  logging_conf.py  main.py
tests/: test_cli.py  test_commit_graph.py  test_data_processing.py  test_github_api.py  test_logging_conf.py
