[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ox-ctfd-task"
version = "0.1.0"
description = "Home assignment for OX Security - CTFd insights tool"
requires-python = ">=3.10"
readme = "README.md"

dependencies = ["requests>=2.31.0", "pydot>=2.0.0", "graphviz>=0.20.3", "tenacity>=8.2.3"]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
ox-ctfd-task = "ox_ctfd_task.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ox_ctfd_task*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
